--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "build:dev": "npm run clean && webpack --env mode=development --progress",
         "dev": "npm run build:dev && webpack serve --open",
         "lint": "biome lint .",
-        "lint:fix": "biome lint --write ."
+        "lint:fix": "biome lint --write .",
+        "prepare": "husky"
     },
     "repository": {
         "type": "git",
@@ -22,11 +23,17 @@
     "devDependencies": {
         "@biomejs/biome": "^2.1.2",
         "html-webpack-plugin": "^5.6.3",
+        "husky": "^9.1.7",
         "ts-loader": "^9.5.2",
         "typescript": "^5.7.3",
         "webpack": "^5.98.0",
         "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.2.2"
+    },
+    "lint-staged": {
+        "src/**/*.{ts,tsx}": [
+            "biome lint"
+        ]
     }
 }
