--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "dev": "npm run build:dev && webpack serve --open",
         "lint": "biome lint .",
         "lint:fix": "biome lint --write .",
-        "prepare": "husky"
+        "prepare": "husky",
+        "test": "echo \"No test specified yet\""
     },
     "repository": {
         "type": "git",
