--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
         "src/**/*.{ts,tsx}": [
             "biome lint"
         ]
+    },
+    "dependencies": {
+        "events": "^3.3.0"
     }
 }
