--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "dependencies": {
         "events": "^3.3.0",
+        "fast-xml-parser": "^5.2.5",
         "loglevel": "^1.9.2"
     }
 }
